<resources>
    <string name="app_name">Aero Swift</string>
    <string name="login_heading">Welcome back!</string>
    <string name="t_and_c">By continuing you agree to our T&amp;Cs. We use your data to offer you a personalized experience</string>
    <string name="login_google_text">or sign in with Google</string>
    <string name="message_logout">Logout success!</string>
    <string name="password_recovery">Password recovery</string>
    <string name="password_recovery_desc">Enter your registered email address to recover your password</string>
    <string name="choose_verification">Choose verification method</string>
    <string name="choose_verification_desc">We`ll send you a verification code to reset your password</string>
    <string name="verification_code">Verification Code</string>
    <string name="verification_code_desc">We have sent the code verification to %1$s Please input the 4 digits code</string>
    <string name="resend">Resend</string>
    <string name="server_client_id">432632858701-8pjqliu5fet9klpoqoa4o22oni7q700a.apps.googleusercontent.com</string>
    <string name="permission_notification_title">Notify latest offers &amp; flights availability</string>
    <string name="permission_notification_desc">Enable notifications now and never miss out on exclusive deals that are hand-picked just for you. Click  continue to savings!</string>
    <string name="time_flight">1h 2m</string>
    <string name="time_departure">06:25 AM</string>
    <string name="time_arrival">07:40 AM</string>
    <string name="garuda_short_name">GA207</string>
    <string name="excess_search">Excess baggage (+)</string>
    <string name="excess_price_search">IDR 25,000/kg</string>
    <string name="search_departure">Yogyakarta</string>
    <string name="search_arrival">Jakarta</string>
    <string name="search_date">Tue, 3 Jan 2024</string>
    <string name="search_passenger">2 Passengers</string>
    <string name="search_class">Economy Class</string>
    <string name="title_home">Home</string>
    <string name="title_flight">My Flight</string>
    <string name="title_profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_back">Welcome back,</string>
    <string name="name">Name</string>
    <string name="soar_to_new_heights_and_cultivate_expertise">Soar to New Heights and Cultivate Expertise</string>
    <string-array name="origin">
        <item>Select</item>
        <item>JKT</item>
        <item>SBY</item>
        <item>YIA</item>
    </string-array>
    <string name="destination">Destination</string>
    <string name="depart_date">Depart Date</string>
    <string name="select_date">Select Date</string>
    <string name="passenger_s_and_cabin_class">Passenger (s) and Cabin Class</string>
    <string name="search_flight">Search Flight</string>
    <string name="select_passenger_and_cabin_class">Select passenger and cabin class</string>
    <string name="passengers_and_cabin_class">Passengers and cabin class</string>
    <string name="close">close</string>
    <string name="economy_class">Economy Class</string>
    <string name="first_class">First Class</string>
    <string name="business_class">Business Class</string>
    <string name="save">Save</string>
    <string name="adult">Adult</string>
    <string name="_12_years_old">+12 years old</string>
    <string name="minus">minus</string>
    <string name="plus">plus</string>
    <string name="_0">0</string>
    <string name="best_deal_for_you">Best Deal For You</string>
    <string name="return_date">Return Date</string>
    <string name="upcoming_flight">Upcoming Flight</string>
    <string name="_24_oct_09_50">24 Oct, 09:50</string>
    <string name="yia">YIA</string>
    <string name="yogyakarta">Yogyakarta</string>
    <string name="_25_oct_09_50">25 Oct, 09:50</string>
    <string name="tokyo">Tokyo</string>
    <string name="title_flight_booking">Flight are not available on that date, please select the nearest date.</string>
    <string name="desc_flight_booking">The selected flight date may not have any available flights. Alternatively, you can choose flights on other dates below.</string>
    <string name="set_new_password">Set new password</string>
    <string name="used_passwords">Your new password must be diffrent from previosly used passwords.</string>
    <string name="new_password">New Password</string>
    <string name="retype_new_password">Retype New Password</string>
    <string name="change_password">Change Password</string>
    <string name="confirm">Confirm</string>
    <string name="strip">-</string>
    <string name="resend_code_after">Resend code after</string>
    <string name="track_amp_find_your_flight"><![CDATA[Track & find your flight]]></string>
    <string name="login_as_guest">Login as guest</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="password">Password</string>
    <string name="email_phone_number">Email/Phone number</string>
    <string name="register_heading">Let’s get started</string>
    <string name="register_desc">Please enter your valid data in order to create an account.</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign up</string>
    <string name="register_google_text">or sign up with Google</string>
    <string name="your_password_has_been_changed_successfully">Your password has been changed successfully!</string>
    <string name="login">Login</string>
    <string name="we_have_sent_the_code_verification_to">We have sent the code verification to</string>
    <string name="test_gmail_com">test@gmail.com.</string>
    <string name="change_your_email">Change your email?</string>
    <string name="setup_profile">Setup profile</string>
    <string name="upload_image">Upload Image</string>
    <string name="full_name">Full name</string>
    <string name="date_of_birth_dd_mm_yyyy">Date of birth (DD/MM/YYYY)</string>
    <string name="phone_number">Phone number</string>
    <string name="_62">+62</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="your_account_has_been_verified_succesfully">Your account has been verified succesfully</string>
    <string name="redirecting_to_home_in">Redirecting to home in</string>
    <string name="_0_03">0:03</string>
    <string name="complete_your_booking">Complete Your Booking</string>
    <string name="non_stop">Non-stop</string>
    <string name="cgk">CGK</string>
    <string name="contact_details">Contact Details</string>
    <string name="jessica_jane">Jessica Jane</string>
    <string name="j_jane_gmail_com">J.jane@gmail.com</string>
    <string name="_62_8723_9873_9837">+62 8723-9873-9837</string>
    <string name="contact_details_desc">Ticket information and confirmation will be sent to the contact details listed</string>
    <string name="passenger_details">Passenger Details</string>
    <string name="same_as_contact_details">Same as contact details</string>
    <string name="passenger_1_adult">Passenger 1 (Adult)</string>
    <string name="passenger_2_baby">Passenger 2 (Baby)</string>
    <string name="covid19_details">Covid-19 has caused widespread disruption to international travel. See all the latest Covid-19 restrictions on our Covid-19 infopage</string>
    <string name="passenger_info">Passenger info</string>
    <string name="nik">NIK</string>
    <string name="mr">Mr.</string>
    <string name="mrs">Mrs.</string>
    <string name="ms">Ms.</string>
    <string name="are_you_vaccinated">Are you vaccinated?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="continue_">Continue</string>
    <string name="travel_docs_title">Your destination requires travel documents</string>
    <string name="travel_docs_desc">Please prepare the documents, you will need to enter the details.</string>
    <string name="selected_flight">Selected Flight</string>
    <string name="_2_passenger">2 Passenger</string>
    <string name="depart">Depart</string>
    <string name="tue_18_dec_2018">Tue, 18 Dec 2018</string>
    <string name="_08_00_am">08:00 AM</string>
    <string name="yogyakarta_kulon_progo">Yogyakarta Kulon Progo</string>
    <string name="terminal_1_domestic">Terminal 1 Domestic</string>
    <string name="what_s_included">What\'s included</string>
    <string name="excess_baggage_idr_25_000_kg">Excess Baggage (+) : IDR 25,000 / kg</string>
    <string name="free_meals">Free Meals</string>
    <string name="total">Total</string>
    <string name="idr_1_000_000">IDR 1.000.000</string>
    <string name="select_flight">Select Flight</string>
    <string name="your_travel_documents_1">Your travel documents 1</string>
    <string name="document_type">Document type</string>
    <string name="nationality">Nationality</string>
    <string name="document_number">Document number</string>
    <string name="expiry_date_dd_mm_yyyy">Expiry Date (DD/MM/YYYY)</string>
    <string name="upload_your_scanned_documents">Upload your scanned documents</string>
    <string name="term_of_services">Term of Services</string>
    <string name="term_1">1. User Agreement</string>
    <string name="term_1_desc">By using our services, you affirm that you are at least 18 years old or have obtained consent from a parent or legal guardian.</string>
    <string name="term_2">2. Service Usage</string>
    <string name="term_2_desc">You agree to use our services only for lawful purposes and in compliance with all applicable laws and regulations.</string>
    <string name="term_3">3. User Privacy</string>
    <string name="term_3_desc">We respect your privacy. Any personal information you provide will be handled and used in accordance with our privacy policy.</string>
    <string name="term_4">4. User Responsibility</string>
    <string name="term_4_desc">You are fully responsible for the security of your account and any activities that occur on your account. Report any unauthorized use promptly.</string>
    <string name="term_5">5. Updates and Changes</string>
    <string name="term_5_desc">We reserve the right to update or change these terms without prior notice. Changes will be effective immediately upon posting on our website.</string>
    <string name="term_6">6. Access Termination</string>
    <string name="term_6_desc">We reserve the right to suspend or terminate your access to our services with or without notice, at our discretion.</string>
    <string name="term_7">7. Intellectual Property Rights</string>
    <string name="term_7_desc">Content and materials in our services are protected by copyright and other intellectual property rights. Unauthorized use may violate the law.</string>
    <string name="term_8">8. Indemnification</string>
    <string name="term_8_desc">You agree to indemnify us against any claims or losses arising from your use of our services in violation of these terms.</string>
    <string name="latest_update_dec_2023">Latest update Dec 2023</string>
    <string name="accept">Accept</string>
    <string name="i_agree_to_the_terms_of_service">I Agree to the Terms of Service</string>
    <string name="arrived">Arrived</string>
    <string name="ga207">GA207</string>
    <string name="bella_hadid">Bella Hadid</string>
    <string name="can_t_access">Can’t Access</string>
    <string name="auth_dialog_desc">You must sign in first to be able to use all the features</string>
    <string name="tue_4_jan_2024">Tue, 4 Jan 2024</string>
    <string name="_07_40_am">07:40 AM</string>
    <string name="terminal">Terminal</string>
    <string name="gate">Gate</string>
    <string name="_12a">12A</string>
    <string name="_3_">3</string>
    <string name="b3">B3</string>
    <string name="flight">Flight</string>
    <string name="seat">Seat</string>
    <string name="_4_jan">4 Jan</string>
    <string name="date">Date</string>
    <string name="boarding">Boarding</string>
</resources>