<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.TermOfServicesActivity"
    android:paddingTop="50dp">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_term_and_serv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="?attr/homeAsUpIndicator"
        android:paddingBottom="8dp"/>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_term_and_serv"
        android:paddingHorizontal="16dp"
        android:paddingBottom="100dp"
        android:scrollbars="vertical"
        android:scrollbarThumbVertical="@color/primary_500"
        android:scrollbarTrackVertical="@color/gray_300">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingEnd="20dp"
            tools:ignore="RtlSymmetry">

            <com.google.android.material.textview.MaterialTextView
                style="@style/TextS.Regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/latest_update_dec_2023"
                android:textColor="@color/gray_500" />

            <com.google.android.material.textview.MaterialTextView
                style="@style/H6.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/term_of_services"
                android:textColor="@color/base_black"
                android:layout_marginTop="4dp"/>

            <com.google.android.material.textview.MaterialTextView
                style="@style/TextS.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/term_1"
                android:textColor="@color/base_black" />

            <com.google.android.material.textview.MaterialTextView
                style="@style/TextS.Regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/term_1_desc"
                android:textColor="@color/gray_700" />

            <com.google.android.material.textview.MaterialTextView
                style="@style/TextS.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/term_2"
                android:textColor="@color/base_black" />

            <com.google.android.material.textview.MaterialTextView
                style="@style/TextS.Regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/term_2_desc"
                android:textColor="@color/gray_700" />

            <com.google.android.material.textview.MaterialTextView
                style="@style/TextS.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/term_3"
                android:textColor="@color/base_black" />

            <com.google.android.material.textview.MaterialTextView
                style="@style/TextS.Regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/term_3_desc"
                android:textColor="@color/gray_700" />

            <com.google.android.material.textview.MaterialTextView
                style="@style/TextS.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/term_4"
                android:textColor="@color/base_black" />

            <com.google.android.material.textview.MaterialTextView
                style="@style/TextS.Regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/term_4_desc"
                android:textColor="@color/gray_700" />

            <com.google.android.material.textview.MaterialTextView
                style="@style/TextS.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/term_5"
                android:textColor="@color/base_black" />

            <com.google.android.material.textview.MaterialTextView
                style="@style/TextS.Regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/term_5_desc"
                android:textColor="@color/gray_700" />

            <com.google.android.material.textview.MaterialTextView
                style="@style/TextS.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/term_6"
                android:textColor="@color/base_black" />

            <com.google.android.material.textview.MaterialTextView
                style="@style/TextS.Regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/term_6_desc"
                android:textColor="@color/gray_700" />

            <com.google.android.material.textview.MaterialTextView
                style="@style/TextS.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/term_7"
                android:textColor="@color/base_black" />

            <com.google.android.material.textview.MaterialTextView
                style="@style/TextS.Regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/term_7_desc"
                android:textColor="@color/gray_700" />

            <com.google.android.material.textview.MaterialTextView
                style="@style/TextS.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/term_8"
                android:textColor="@color/base_black" />

            <com.google.android.material.textview.MaterialTextView
                style="@style/TextS.Regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/term_8_desc"
                android:textColor="@color/gray_700" />

            <CheckBox
                android:id="@+id/checkBoxAgree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:checked="false"
                android:buttonTint="@color/primary_500"
                android:text="@string/i_agree_to_the_terms_of_service" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_acc"
                style="@style/Button.Primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/accept"
                android:layout_marginTop="16dp"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_scroll_down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:src="@drawable/baseline_arrow_downward_24"
        app:backgroundTint="@color/primary_500"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:rippleColor="@color/gray_100"
        app:tint="@android:color/white"/>

</androidx.constraintlayout.widget.ConstraintLayout>