<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    android:paddingBottom="24dp"
    android:background="@drawable/bg_dialog">

    <com.google.android.material.textview.MaterialTextView
        style="@style/Text.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/can_t_access"
        android:textColor="@color/base_black"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"/>

    <com.google.android.material.textview.MaterialTextView
        style="@style/TextS.Regular"
        android:layout_width="243dp"
        android:layout_height="wrap_content"
        android:text="@string/auth_dialog_desc"
        android:textColor="@color/base_black"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_sign_in"
        style="@style/Button.Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/sign_in"/>

</LinearLayout>